# flux-memory

./: .gitignore  <sqlite3.Connection object at 0x10934cd60>  <sqlite3.Connection object at 0x109960d60>  <sqlite3.Connection object at 0x10b214c70>  <sqlite3.Connection object at 0x10b5d4c70>  BUILD_SUMMARY_v0.6.md  CLAUDE.md  DASHBOARD_DESIGN_BRIEF.md  README.md  dashboard.html  dashboard.html.svg-backup  dashboard_new.js  flux_graph.html  flux_graph_full.html  graph_data.json  pyproject.json  pyproject.toml  reference-dashboard.html  start_dashboard.sh  visualize.html  visualize_server.py
config/: flux.yaml
design/: Mobile_Preview.html  README.md
design/mobile-preview/: DESIGN_HANDOFF_PROMPT.md  Flux Dashboard.html  Mobile Preview - live.html  README.md
docs/: PROJECT.md  flux-memory-docs.md
src/: __init__.py  conduit.py  dashboard_api.py  decay.py  decompose.py  embedding.py  entry_point.py  flux.py  grain.py  integration.py  mcp_server.py  propagation.py  store.py  trace.py
src/flux/: __init__.py  __main__.py  admin.py  admin_auth.py  alerts.py  cli.py  clustering.py  config.py  consolidation.py  dashboard.py  decay.py  embedding.py  epistemics.py  expansion.py  extraction.py  graph.py  health.py  llm.py  mcp_server.py  ops.py  prewarm.py  promotion.py  propagation.py  reinforcement.py  remote.py  rest_api.py  retrieval.py  schema.sql  service.py  shift.py  storage.py  visualization.py
static/: chronicle.html  globe.html  mobile.html  mycelium.html  nebula.html  pool.html  test.html  vitals.html
tests/: conftest.py  mocks.py  test_admin_auth.py  test_cli_v6.py  test_clustering.py  test_config.py  test_config_yaml.py  test_consolidation.py  test_dashboard_activity.py  test_decay.py  test_dossier.py  test_e2e.py  test_embedding_index.py  test_embedding_lazy.py  test_epistemics.py  test_extraction.py  test_flux.py  test_health.py  test_heat.py  test_mcp_v6.py  test_ops.py  test_promotion.py  test_propagation.py  test_reinforcement.py  test_rest_api.py  test_retrieval.py  test_schema.py  test_service.py  test_storage.py  test_store_hygiene.py  test_trace_walk.py  test_track6.py  test_v7_features.py  test_visualization.py
